# django-fsm-freeze

./: .coveragerc  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
.circleci/: config.yml
.github/workflows/: continues-integration.yml  publish.yml  send-coverage.yml
django_fsm_freeze/: __init__.py  asgi.py  exceptions.py  models.py  settings.py  urls.py  wsgi.py
django_fsm_freeze_models/: mixin.py
docs/: DEVELOPING.md
my_django_fsm_freeze/: asgi.py  settings.py  urls.py  wsgi.py
mytest/: models.py  test_models.py
mytest/migrations/: 0001_initial.py  0002_fakemodel2.py  0003_fakemodel2_another_status.py  0004_subfakemodel_subsubfakemodel.py  0005_auto_20210823_1255.py
