[tool.poetry]
name = "django-fsm-freeze"
version = "0.1.2"
description = "django-fsm data immutability support"
authors = ["ming-tung <mingtung.hong@gmail.com>"]
license = "MIT"
repository = "https://github.com/ming-tung/django-fsm-freeze"
exclude = ["mytest/", "my_django_fsm_freeze/"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
pytest = "^6.2.4"
django-fsm = "^2.7.1"
django-dirtyfields = "^1.7.0"
pytest-django = "^4.4.0"
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization=true
exclude='build/|dist/|\.eggs/|\.git/|\.pytest_cache/|\.tox/|\.?venv/|migrations/'

[tool.isort]
profile='black'
line_length=79
multi_line_output=3
include_trailing_comma=true
force_grid_wrap= 0
use_parentheses=true
ensure_newline_before_comments=true
skip = ["mytest/migrations/", ".venv/",]
